2007-06-14  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpdatafactory.c (gimp_data_factory_data_foreach):
	remove calls to container_freeze() and container_thaw()

	(gimp_data_factory_data_reload)
	(gimp_data_factory_data_free): add them here instead.

	(gimp_data_factory_data_save): remove freeze/thaw calls here
	without any replacement. The list doesn't change by saving its
	items. Fixes insanely long quit time when there are many data
	objects.

2007-06-14  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage.c: implement the GimpColorManaged interface.

2007-06-14  Sven Neumann  <sven@gimp.org>

	* libgimpthumb/Makefile.am (gimp_thumbnail_list_LDADD): fixed
	parallel builds (bug #447402).

2007-06-13  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff-load.c: prepend instead of appending to list.

2007-06-13  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme.c (putchars): Update "cursor"
	after writing characters to a string buffer. Fixes bug #446884.

2007-06-13  Sven Neumann  <sven@gimp.org>

	* app/app.c (app_exit_after_callback): if GIMP_UNSTABLE is
	undefined before calling exit() call tile_swap_exit(), not
	base_exit().

2007-06-13  Sven Neumann  <sven@gimp.org>

	* app/base/base.c (base_exit): call tile_cache_exit() before
	tile_swap_exit(). tile_cache_exit() may use the tile swap in
	pathological cases.

	* app/base/tile-cache.c (tile_cache_exit): warn if the tile cache
	is not empty.

2007-06-13  Sven Neumann  <sven@gimp.org>

	* app/base/tile-cache.c: minor cleanup.

2007-06-13  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff-load.c: small fix to the previous commit
	in how layers are skipped.

2007-06-13  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/tiff-load.c: don't load any layers from a TIFF
	directory which don't match the mode of the first image in the TIFF
	directory.

2007-06-13  Sven Neumann  <sven@gimp.org>

	* app/errors.[ch]: added errors_exit() and unset the Gimp